# NeoQuake

./: CMakeLists.txt  README.md  glfwv.cpp
shaders/: basic.frag  basic.vert
src/: BSP.h  BSP_Convert.cpp  BSP_Entities.cpp  BSP_Entities.h  BSP_Lightmaps.cpp  BSP_Load.cpp  BSP_Palette.cpp  Camera.h  Camera_Move.cpp  Camera_Proj.cpp  Camera_View.cpp  Explore.cpp  Explore.h  Explore_Spawn.cpp  Game.cpp  Game.h  Input.cpp  Input.h  Renderer.h  Renderer_Draw.cpp  Renderer_Upload.cpp  Shader.h  Shader_Build.cpp  Shader_Load.cpp  Texture.cpp  Texture.h  Texture_CreatePtr.cpp  Texture_CreateVec.cpp  main.cpp  main_game.cpp  main_viewer.cpp
